--- a/.github/workflows/docker-publish-server.yml
+++ b/.github/workflows/docker-publish-server.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run tests
-        run: docker build . --file docker/server/Dockerfile
+        run: docker build . --file Dockerfile.server
 
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
