--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,9 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "options": {
+                "cwd": "${cwd}"
             }
         },
         {
@@ -19,6 +22,9 @@
             "group": {
                 "kind": "test",
                 "isDefault": true
+            },
+            "options": {
+                "cwd": "${cwd}"
             }
         }
     ]
