--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 base_url = "sakul6499.github.io"
 
 # The site title and description; used in feeds by default.
-title = "sakul6499.github.io"
+title = "@SakulFlee | @Sakul6499 | Lukas Weber"
 description = "TODO"
 
 # The default language; used in feeds.
