--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "main"
+  schedule:
+    - cron: "0 6 * * *"
 
 jobs:
   deploy:
@@ -14,6 +16,16 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3.5.0
+
+      - name: Download latest engine version
+        uses: robinraju/release-downloader@v1.9
+        with:
+          repository: SakulFlee/Akimo-Project
+          latest: true
+          preRelease: false
+          out-file-path: static/engine/
+          fileName: Akimo-Project.Engine-Web.zip
+          extract: true
 
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.17.2
