--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
           fileName: Akimo-Project.Engine-Web.zip
           extract: true
 
+      - name: Make path adjustments to engine
+        run: sed -e s,/engine_web,/engine/engine_web,g -i static/engine/index.html
+
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.17.2
         env:
