--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3.5.0
 
-      - name: Download latest engine version
+      - name: Download latest released engine version
         uses: robinraju/release-downloader@v1.9
         with:
           repository: SakulFlee/Akimo-Project
@@ -32,6 +32,15 @@ jobs:
 
       - name: Make path adjustments to engine
         run: sed -e s,/engine_web,/engine/engine_web,g -i static/engine/index.html
+
+      - name: Download latest main branch engine version
+        uses: actions/download-artifact@v4
+        with:
+          name: engine-web
+          path: static/engine-beta/
+          repository: SakulFlee/Akimo-Project
+
+      - run: ls -al static/
 
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.17.2
