--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,13 @@ jobs:
           workflow_conclusion: success
           branch: main
           name: engine-web
+          path: static/engine-beta/
           skip_unpack: false
           repo: SakulFlee/Akimo-Project
 
       - run: ls -al .
+      - run: ls -al static  
+      - run: ls -al static/engine-beta
 
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.17.2
