--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Make path adjustments to engine-beta
         run: sed -e s,/engine_web,/engine-beta/engine_web,g -i static/engine-beta/index.html
 
-      - name: build_and_deploy
+      - name: Build & Deploy
         uses: shalzz/zola-deploy-action@v0.17.2
         env:
           # Target branch
