--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,9 @@ jobs:
         run: mv static/engine-web/ static/engine/
 
       - name: Make path adjustments to engine
-        run: sed -e s,/engine_web,/engine/engine_web,g -i static/engine/index.html
+        run: |
+          sed -e s,/engine_web,/engine/engine_web,g -i static/engine/index.html
+          sed -e s,/style.css,/engine/style.css,g -i static/engine/index.html
 
       - name: Download latest main branch engine version
         uses: dawidd6/action-download-artifact@v3
@@ -48,7 +50,9 @@ jobs:
           repo: SakulFlee/Akimo-Project
 
       - name: Make path adjustments to engine-beta
-        run: sed -e s,/engine_web,/engine-beta/engine_web,g -i static/engine-beta/index.html
+        run: |
+          sed -e s,/engine_web,/engine-beta/engine_web,g -i static/engine-beta/index.html
+          sed -e s,/style.css,/engine-beta/style.css,g -i static/engine-beta/index.html
 
       - name: Build & Deploy
         uses: shalzz/zola-deploy-action@v0.17.2
