--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The base URL of the site; the only required configuration variable.
-base_url = "sakul-flee.de"
+base_url = "sakulflee.github.io"
 
 # The site title and description; used in feeds by default.
 title = "@SakulFlee | Lukas Weber"
