--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Sakul6499",
-  "name": "Sakul6499 | Lukas Weber",
+  "short_name": "SakulFlee | Sakul6499 | Lukas",
+  "name": "SakulFlee | Sakul6499 | Lukas",
   "icons": [
     {
       "src": "favicon.ico",
